# EnerveraBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
Memory_Layer/: __init__.py
Memory_Layer/session_memory/: __init__.py  context_builder.py  models.py  retriever.py  session_manager.py  state_extractor.py  summarizer.py
app/: __init__.py  container.py  main.py
app/api/: deps.py  middleware.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py
app/schemas/: __init__.py  chat.py  common.py
chunking/: __init__.py
chunking/chunkers/: sub_chunker.py
chunking/cleaners/: text_cleaner.py
chunking/config/: settings.py
chunking/detectors/: structure.py
chunking/extractors/: semantic.py
chunking/llm/: client.py  retry_engine.py
chunking/loaders/: pdf_loader.py
chunking/normalizers/: medical.py
chunking/pipeline/: manager.py
chunking/schemas/: models.py
chunking/storage/: versioned_storage.py
chunking/validators/: schema_validator.py
data/eval/: retrieval_log.jsonl
data/pathology/: robbins_basic_pathology_10th_edition.json
docs/: EPISODIC_API.md  FRONTEND.md  MEMORY_PGVECTOR_SETUP.md  MEMORY_REDESIGN.md
episodic/: __init__.py  config.py
episodic/api/: __init__.py  app.py  dependencies.py  routes.py
episodic/eval/: __init__.py  cli.py  logger.py  metrics.py
episodic/fixtures/: cardio_test.json  geriatric_test.json  migraine_test.json
episodic/pipelines/: __init__.py  context.py  ingest.py
episodic/prompts/: clarification.py  compression.py  contradiction.py  extraction.py
episodic/schemas/: __init__.py  clarification.py  contradiction.py  episode.py  retrieval.py
episodic/scripts/: _scenarios_data.py  scenarios.py  seed.py
episodic/services/: __init__.py  clarifier.py  compression.py  contradiction.py  decay.py  extractor.py  ranker.py  retriever.py  storage.py
episodic/utils/: embeddings.py  retry.py
graphrag/: __init__.py
graphrag/config/: __init__.py  settings.py
graphrag/llm/: gemini_client.py  gemini_llm.py
graphrag/memory/: __init__.py  session_adapter.py
graphrag/pipeline/: graphrag_pipeline.py
graphrag/processors/: entity_processor.py
graphrag/query_understanding/: __init__.py  analyzer.py  query_config.py  query_types.py  routing.py
graphrag/retrievers/: neo4j_retriever.py  pinecone_retriever.py
graphrag/utils/: __init__.py  logger.py  rate_limit.py
memory/: __init__.py  adapter.py
memory/cache/: __init__.py  redis_cache.py
memory/db/: __init__.py  base.py  session.py
memory/models/: __init__.py  clinical_fact.py  conversation_event.py  episodic_memory.py  patient.py  patient_state.py  retrieval_log.py  semantic_memory.py
memory/pipelines/: __init__.py  update_after_turn.py
memory/prompts/: __init__.py  extraction.py
memory/schemas/: __init__.py  fact.py  retrieval.py  state.py
memory/services/: __init__.py  consolidation.py  extraction.py  retrieval.py  safety.py  summarization.py
scripts/: check_api.py  chunker.py  clean_chunks.py  ingest_neo4j.py  ingest_pinecone.py  progress.py
tests/: GraphRAG_Session_Transcript.docx  conftest.py
tests/api_keys/: keytester.py
tests/integration/: test_api_chat.py  test_episodic_cardio.py  test_episodic_geriatric.py  test_episodic_migraine.py
tests/stress_test/: RAG STRESS TEST 2.xlsx  run_stress_test.py
(+18 files in other folders)
