[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "enervera-graphrag"
version = "0.1.0"
description = "Medical GraphRAG: vector search + knowledge graph + session-aware clinical Q&A."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Enervera" }]
keywords = ["rag", "graphrag", "medical", "pinecone", "neo4j", "redis", "llm"]

dependencies = [
    # Vector + graph + cache
    "pinecone>=5.0.0",
    "neo4j>=5.0.0",
    "redis>=5.0.0",
    # HTTP + env + serialization
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0",
    # Data validation / settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Document ingestion
    "PyMuPDF>=1.23.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    # Google Gemini SDK (LLM for answer generation, classification,
    # extraction, summarization, chunk cleaning).
    "google-genai>=1.0.0",
    # System trust store bridge — needed on enterprise Windows machines
    # where corp VPN/AV intercepts TLS and presents a cert not in certifi.
    "truststore>=0.10.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
]
memory = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "httpx>=0.27.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "fakeredis>=2.20.0",
    "respx>=0.20.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "enervera-graphrag[test,api,memory]",
]

[project.urls]
Homepage = "https://github.com/enervera/graphrag"
Issues = "https://github.com/enervera/graphrag/issues"

# Console scripts land in Wave 4 (enervera-chunk, enervera-ingest-*, enervera-api).
# Intentionally omitted here to keep Wave 1 install side-effect free.

# ---------------------------------------------------------------------------
# Build: which directories make up the wheel
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["graphrag", "Memory_Layer", "chunking", "episodic", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

# ---------------------------------------------------------------------------
# Tooling (full configuration lands in Wave 2; placeholders here)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "episodic_integration: hits live Pinecone + Gemini APIs. Run with: pytest -m episodic_integration. Skip with: pytest -m 'not episodic_integration'",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["chunking/output", "logs", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["chunking/output", "logs", "data", "tests/StressTest"]
